Fix vertical alignment.

--- a/css/theme/drupalcon.css
+++ b/css/theme/drupalcon.css
@@ -29,7 +29,7 @@ body {
   color: #f5cf3f;
   border: 6px solid #eacc83;
   border-radius: 15px;
-  margin: -1em 8.5em;
+  margin: -.75em 8.5em;
   padding: .75em;
 }
 
